[gd_scene load_steps=13 format=2]

[ext_resource path="res://World/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/UILayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Ship/PlayerShip.tscn" type="PackedScene" id=4]
[ext_resource path="res://Music/UrsaMajorMenu001.wav" type="AudioStream" id=5]
[ext_resource path="res://Common/Classes/StageNodesHandler.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/UIDebugLayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Annoucer.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/ShaderCanvas.tscn" type="PackedScene" id=9]
[ext_resource path="res://Common/ScoreSystem.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade-in"
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 0.148651 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
PlayerShip = ExtResource( 4 )

[node name="Annoucer" parent="." instance=ExtResource( 8 )]
visible = false
mouse_filter = 2

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="UILayer" parent="." instance=ExtResource( 2 )]

[node name="SpawnPosition2D" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade-in = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[node name="StageNodesHandler" parent="." instance=ExtResource( 6 )]
Progress = 20

[node name="ShaderCanvas" parent="." instance=ExtResource( 9 )]

[node name="UIDebugLayer" parent="." instance=ExtResource( 7 )]
visible = false

[node name="ScoreSystem" parent="." instance=ExtResource( 10 )]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -80.0

[connection signal="release" from="World" to="." method="_on_World_release"]
[connection signal="quit" from="UILayer" to="." method="_on_UILayer_quit"]
[connection signal="start_game" from="UILayer" to="." method="_on_UILayer_start_game"]
[connection signal="EndOfStory" from="StageNodesHandler" to="." method="_on_StageNodesHandler_EndOfStory"]
[connection signal="Progressed" from="StageNodesHandler" to="." method="_on_StageNodesHandler_Progressed"]
[connection signal="change_spawn_texture" from="StageNodesHandler" to="World" method="_on_StageNodesHandler_change_spawn_texture"]
[connection signal="change_surface" from="StageNodesHandler" to="World" method="_on_StageNodesHandler_change_surface"]
[connection signal="say" from="StageNodesHandler" to="." method="_on_StageNodesHandler_say"]
